Update SkillLootTrackerPanel.java